Add Memory Stuff Documents Chain

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13,12 +13,15 @@
     "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
     "from langchain.vectorstores import FAISS\n",
     "from langchain.storage import LocalFileStore\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from langchain.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
     "\n",
     "llm = ChatOpenAI(\n",
     "  temperature=0.1,\n",
     ")\n",
+    "\n",
+    "memory = ConversationBufferMemory(return_messages=True)\n",
     "\n",
     "cache_dir = LocalFileStore(\"./.cache/\")\n",
     "\n",
@@ -48,18 +51,31 @@
     "      \"system\",\n",
     "      \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\"\n",
     "    ),\n",
-    "    (\"human\", \"{question}\")\n",
+    "    MessagesPlaceholder(variable_name=\"history\"),\n",
+    "    (\"human\", \"{question}\"),\n",
     "  ]\n",
     ")\n",
+    "\n",
+    "def load_memory(_):\n",
+    "  return memory.load_memory_variables({})[\"history\"]\n",
     "\n",
     "chain = (\n",
     "  {\n",
     "    \"context\": retriver,\n",
     "    \"question\": RunnablePassthrough(),\n",
+    "    \"history\": RunnableLambda(load_memory),\n",
     "  }\n",
     "  | prompt\n",
     "  | llm\n",
-    ")"
+    ")\n",
+    "\n",
+    "def invoke_chain(question):\n",
+    "  result = chain.invoke(question)\n",
+    "  memory.save_context(\n",
+    "    {\"input\": question},\n",
+    "    {\"output\": result.content},\n",
+    "  )\n",
+    "  print(result)"
    ]
   },
   {
@@ -69,60 +85,51 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='제가 알기로는 Aaronson이 유죄인지 아닌지에 대한 정보는 제공되지 않았습니다.')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='제가 알기로는 Aaronson이 유죄임을 확실히 알 수 없습니다.'\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke(\"Aaronson은 유죄인가요?\")"
+    "invoke_chain(\"Aaronson은 유죄인가요?\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "359cf28f",
+   "id": "c44886bb",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='그가 쓴 메시지는 \"FREEDOM IS SLAVERY\"와 \"TWO AND TWO MAKE FIVE\"입니다.')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='그가 쓴 메시지는 다음과 같습니다:\\nFREEDOM IS SLAVERY\\nTWO AND TWO MAKE FIVE\\nGOD IS POWER'\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke(\"그가 테이블에 어떤 메세지를 썼나요?\")"
+    "invoke_chain(\"그가 테이블에 어떤 메세지를 썼나요?\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "86cc57dc",
+   "id": "02e9608f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Julia는 Winston과 함께 이야기 중인 여성 캐릭터입니다. Winston은 그녀를 사랑하고 있으며, 그녀가 여전히 살아있고 그의 도움이 필요하다는 것을 알고 있습니다.')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Julia는 주인공과 함께 이야기하는 여성 캐릭터입니다.'\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke(\"Julia는 누구인가요?\")"
+    "invoke_chain(\"Julia는 누구인가요?\")"
    ]
   }
  ],
